--- a/popup.html
+++ b/popup.html
@@ -44,7 +44,8 @@
       <th>Compile</th>
     </tr>
   </table>
-  <button id="save" title="Saves the host:port configuration">Save</button>
+  <button id="stopAll" title="Stops DevMode in all detected, compiled GWT modules.">Stop All</button>
+  <button id="save" title="Saves the host:port configuration.">Save</button>
   <div id="error" style="display: none;"></div>
 </body>
 </html>
