--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
         outline: none;
       }
       
-      button#save {
+      button.footer {
         margin: 1rem;
       }
 
@@ -44,8 +44,9 @@
       <th>Compile</th>
     </tr>
   </table>
-  <button id="stopAll" title="Stops DevMode in all detected, compiled GWT modules.">Stop All</button>
-  <button id="save" title="Saves the host:port configuration.">Save</button>
+  <button id="scanAll" class='footer' title="Scan iframes even the one with different origin.">Scan All</button>
+  <button id="stopAll" class='footer' title="Stops DevMode in all detected, compiled GWT modules.">Stop All</button>
+  <button id="save" class='footer' title="Saves the host:port configuration.">Save</button>
   <div id="error" style="display: none;"></div>
 </body>
 </html>
